Update and rename .env.sample to .env

--- a/.env
+++ b/.env
@@ -15,8 +15,8 @@
 # Do not copy the license into the .env file
 # Do not use quotes (") in the values.
 
-APP_ID=
-API_HASH=
-BOT_TOKEN=
-FROM_CHANNEL=
-TO_CHANNEL=
+APP_ID=2241324
+API_HASH=f741e6c67de1b56dd763c526e1955974
+BOT_TOKEN=1907088678:AAGYZtKIqdpyZgO4edPSRIMnY_l-2mujYHI
+FROM_CHANNEL=1514141609
+TO_CHANNEL=1418717378
